# srt3d_js

./: .gitignore  readme.md
example/: index.html  render.js  srt3d.js
srt3d_js/: CMakeLists.txt
srt3d_js/include/srt3d/: body.h  model.h  region_modality.h  tracker.h
srt3d_js/js/: export.js  srt3d_js.cpp  srt3d_js.hpp
srt3d_js/src/: body.cpp  camera.cpp  model.cpp  region_modality.cpp  tracker.cpp
template_renderer/: CMakeLists.txt  main.cpp
template_renderer/include/srt3d/: model.h
template_renderer/src/: model.cpp
template_renderer_js/: CMakeLists.txt  main.cpp
template_renderer_js/include/srt3d/: model.h  normal_renderer.h  renderer.h  renderer_geometry.h
template_renderer_js/src/: camera.cpp  export.js  model.cpp  normal_renderer.cpp  renderer_geometry.cpp
